<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:fitsSystemWindows="true"
    android:padding="16dp"
    android:focusableInTouchMode="true"
    tools:context=".Activities.LoginActivity"
    tools:layout_editor_absoluteX="2dp"
    android:gravity="center_vertical"
    tools:layout_editor_absoluteY="-38dp">

    <TextView
        android:id="@+id/login_title"
        android:layout_width="300dp"
        android:layout_height="wrap_content"
        android:layout_marginTop="4dp"
        android:ems="10"
        android:fontFamily="@font/architects_daughter_font"
        android:gravity="center"
        android:minHeight="48dp"
        android:text="@string/title_greetings_for_KODA"
        android:textSize="25sp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.50"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/imageView" />
    <!--this is a test comment-->
    <com.google.android.material.textfield.TextInputLayout
        android:id="@+id/inputLayout_email"
        android:layout_width="300dp"
        android:layout_height="wrap_content"
        android:layout_marginTop="20dp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.50"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/login_title">

        <!-- android:id="@+id/login_username" (eto ung orig)-->
        <com.google.android.material.textfield.TextInputEditText
            android:id="@+id/login_email"
            android:layout_width="300dp"
            android:layout_height="wrap_content"
            android:layout_marginEnd="36dp"
            android:ems="10"
            android:hint="enter email"
            android:inputType="textPersonName"
            android:minHeight="48dp"
            android:padding="12dp"
            app:layout_constraintEnd_toEndOf="parent"
            tools:layout_editor_absoluteY="333dp"
            tools:ignore="HardcodedText" />
    </com.google.android.material.textfield.TextInputLayout>

    <com.google.android.material.textfield.TextInputLayout
        android:id="@+id/inputLayout_password2"
        android:layout_width="300dp"
        android:layout_height="wrap_content"
        android:layout_marginTop="20dp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.50"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/inputLayout_email"
        app:passwordToggleEnabled="true">

        <com.google.android.material.textfield.TextInputEditText
            android:id="@+id/login_password"
            android:layout_width="300dp"
            android:layout_height="wrap_content"
            android:ems="10"
            android:hint="enter password"
            android:inputType="textPassword"
            android:minHeight="48dp"
            android:padding="12dp"
            tools:layout_editor_absoluteX="58dp"
            tools:layout_editor_absoluteY="416dp"
            tools:ignore="HardcodedText" />
    </com.google.android.material.textfield.TextInputLayout>

    <com.google.android.material.button.MaterialButton
        android:id="@+id/login_button"
        android:layout_width="300dp"
        android:layout_height="wrap_content"
        android:layout_marginTop="28dp"
        android:backgroundTint="@color/orange"
        app:strokeWidth="1dp"
        app:strokeColor="@color/gray"
        android:text="Login"
        android:textColor="@color/gray"
        android:textSize="17.5sp"
        android:textStyle="bold"
        app:cornerRadius="10sp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.506"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/inputLayout_password2"
        tools:ignore="HardcodedText" />

    <TextView
        android:id="@+id/signupRedirect"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="38dp"
        android:gravity="center"
        android:text="Not yet registered? Signup"
        android:textSize="16sp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.50"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/login_button"
        tools:ignore="HardcodedText" />

    <ImageView
        android:id="@+id/imageView"
        android:layout_width="192dp"
        android:layout_height="163dp"
        android:layout_marginTop="12dp"
        android:foregroundGravity="center"
        android:src="@drawable/koda_logo2"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.50"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        tools:ignore="ContentDescription" />

</androidx.constraintlayout.widget.ConstraintLayout>
