<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/main"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:gravity="center"
    android:orientation="vertical"
    android:padding="10dp"
    tools:context=".Activities.pageForWebFiltering">
<!--sd-->
    <!-- Filter a word section
    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="Filter a word:"
        android:textSize="25sp"
        android:textStyle="bold"
        android:layout_marginBottom="5dp"
        android:background="@drawable/edit_text_background"
        android:padding="10dp"
        tools:ignore="HardcodedText" />

    <EditText
        android:id="@+id/filter_text"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:hint="Enter word to filter"
        android:inputType="text"
        android:imeOptions="actionDone"
        android:background="@drawable/edit_text_background"
        android:padding="10dp"
        android:layout_marginTop="5dp"
        android:layout_marginBottom="5dp"
        android:layout_marginStart="10dp"
        android:layout_marginEnd="10dp"
        tools:ignore="HardcodedText" />

    <Button
        android:id="@+id/filter_button"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="Filter Word"
        android:textColor="@color/gray"
        android:backgroundTint="@color/orange"
        app:strokeWidth="1dp"
        app:strokeColor="@color/gray"
        android:textSize="18sp"
        android:layout_marginBottom="15dp"
        android:layout_marginStart="10dp"
        android:layout_marginEnd="10dp"
        tools:ignore="HardcodedText" />-->

    <!-- Block a site section -->
    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="Block a Site:"
        android:textSize="25sp"
        android:textStyle="bold"
        android:layout_marginBottom="5dp"
        android:background="@drawable/edit_text_background"
        android:padding="10dp"
        android:layout_marginTop="15dp"
        tools:ignore="HardcodedText" />

    <EditText
        android:id="@+id/block_site"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginStart="10dp"
        android:layout_marginTop="5dp"
        android:layout_marginEnd="10dp"
        android:layout_marginBottom="5dp"
        android:background="@drawable/edit_text_background"
        android:hint="Enter a site to block"
        android:inputType="textUri"
        android:minHeight="48dp"
        android:padding="13dp"
        tools:ignore="HardcodedText" />

    <Button
        android:id="@+id/block_button"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="Block Site"
        android:textColor="@color/gray"
        android:backgroundTint="@color/orange"
        app:strokeWidth="1dp"
        app:strokeColor="@color/gray"
        android:textSize="18sp"
        android:layout_marginBottom="5dp"
        android:layout_marginStart="10dp"
        android:layout_marginEnd="10dp"
        tools:ignore="HardcodedText" />

<!--    nicomment out ko muna ito-->
    <!--<EditText
        android:id="@+id/unblock_site"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginStart="10dp"
        android:layout_marginTop="5dp"
        android:layout_marginEnd="10dp"
        android:layout_marginBottom="5dp"
        android:background="@drawable/edit_text_background"
        android:hint="Enter a site to unblock"
        android:inputType="textUri"
        android:minHeight="48dp"
        android:padding="10dp"
        tools:ignore="HardcodedText" />
    <Button
        android:id="@+id/Unblock_button"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="Un-Block Site"
        android:textColor="@color/gray"
        android:backgroundTint="@color/orange"
        app:strokeWidth="1dp"
        app:strokeColor="@color/gray"
        android:textSize="18sp"
        android:layout_marginBottom="5dp"
        android:layout_marginStart="10dp"
        android:layout_marginEnd="10dp"
        tools:ignore="HardcodedText" />-->

    <Button
        android:id="@+id/see_BlockedSites"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="View Blocked \nSites"
        android:textColor="@color/gray"
        android:backgroundTint="@color/orange"
        app:strokeWidth="1dp"
        android:textStyle="bold"
        app:strokeColor="@color/gray"
        android:textSize="18sp"
        android:layout_marginTop="20dp"
        android:layout_marginBottom="5dp"
        android:layout_marginStart="10dp"
        android:layout_marginEnd="10dp"
        tools:ignore="HardcodedText" />
</LinearLayout>
