<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:fitsSystemWindows="true"
    android:layout_height="match_parent"
    android:paddingLeft="25dp"
    android:paddingRight="25dp"
    android:gravity="center"
    android:id="@+id/Child_Info_Add"
    tools:context=".Activities.addChildInfo">

    <LinearLayout
        android:id="@+id/near_Out"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical"
        android:gravity="center">
        <TextView
            android:id="@+id/textViewTitle"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="Add a Child"
            android:textStyle="bold"
            android:textSize="24sp"
            android:textColor="#333333"
            android:padding="8dp"
            android:background="@drawable/rounded_corner_background"
            android:elevation="4dp"
            android:layout_gravity="center_horizontal"
            tools:ignore="HardcodedText" />

        <EditText
            android:id="@+id/child_firstName"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:hint="First Name"
            android:inputType="textPersonName"
            android:background="@drawable/edit_text_background"
            android:padding="12dp"
            android:layout_marginTop="16dp"
            android:minHeight="48dp"
            android:textSize="16sp"
            tools:ignore="HardcodedText" />

        <EditText
            android:id="@+id/child_lastName"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:hint="Last Name"
            android:inputType="textPersonName"
            android:background="@drawable/edit_text_background"
            android:padding="12dp"
            android:layout_marginTop="16dp"
            android:minHeight="48dp"
            android:textSize="16sp"
            tools:ignore="HardcodedText" />

        <EditText
            android:id="@+id/child_age"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:hint="Child's Age"
            android:inputType="number"
            android:background="@drawable/edit_text_background"
            android:padding="12dp"
            android:layout_marginTop="16dp"
            android:minHeight="48dp"
            android:textSize="16sp"
            tools:ignore="HardcodedText" />
        <!-- <LinearLayout
             android:id="@+id/inner_Layout_AA"
             android:layout_marginTop="16dp"
             android:layout_width="match_parent"
             android:layout_height="wrap_content"
             android:orientation="horizontal">

             &lt;!&ndash; EditText with layout_weight &ndash;&gt;
             <EditText
                 android:id="@+id/parent_id"
                 android:background="@drawable/edit_text_background"
                 android:layout_width="0dp"
                 android:layout_height="wrap_content"
                 android:hint="parent id"
                 android:padding="10dp"
                 android:inputType="text"
                 android:minHeight="48dp"
                 android:layout_weight="1" />

             &lt;!&ndash; Button &ndash;&gt;
             <Button
                 android:id="@+id/modernButton"
                 android:layout_width="wrap_content"
                 android:layout_height="wrap_content"
                 android:layout_gravity="center_vertical"
                 android:layout_marginStart="8dp"
                 android:elevation="41dp"
                 android:paddingStart="16dp"
                 android:paddingTop="8dp"
                 android:paddingEnd="16dp"
                 android:paddingBottom="8dp"
                 android:text="Get Parent ID"
                 android:backgroundTint="@color/green"
                 android:textColor="@color/gray"
                 app:strokeWidth="1dp"
                 app:strokeColor="@color/gray"
                 android:textStyle="bold"
                 app:cornerRadius="10sp" /> &lt;!&ndash; Add margin to create a gap &ndash;&gt;
         </LinearLayout>-->

        <LinearLayout
            android:id="@+id/inner_Layout_AB"
            android:layout_marginTop="16dp"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical"
            android:gravity="center">
            <Button
                android:id="@+id/buttonChild"
                app:cornerRadius="10sp"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:backgroundTint="@color/orange"
                app:strokeWidth="1dp"
                app:strokeColor="@color/gray"
                android:textColor="@color/black"
                android:text="Add Child"
                android:textSize="20sp"
                tools:ignore="HardcodedText" />
        </LinearLayout>
    </LinearLayout>
</RelativeLayout>
