<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:padding="25dp"
    android:fitsSystemWindows="true"
    tools:context=".Activities.MainActivity">

    <TextView
        android:id="@+id/textView"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="172dp"
        android:gravity="center"
        android:text="Who is using this device?"
        android:textSize="30sp"
        android:textStyle="bold"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.50"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        tools:ignore="HardcodedText" />

    <com.google.android.material.button.MaterialButton
        android:id="@+id/parent_button"
        android:layout_width="300dp"
        android:layout_height="wrap_content"
        android:layout_marginTop="28dp"
        android:drawableBottom="@drawable/arrow_icon"
        android:text="Parent"
        android:textColor="@color/gray"
        android:textSize="30sp"
        app:cornerRadius="10dp"
        android:padding="10dp"
        android:backgroundTint="@color/orange"
        app:strokeWidth="1dp"
        app:strokeColor="@color/gray"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.50"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/textView"
        tools:ignore="HardcodedText" />

    <com.google.android.material.button.MaterialButton
        android:id="@+id/child_button"
        android:layout_width="300dp"
        android:layout_height="wrap_content"
        android:layout_marginTop="24dp"
        android:drawableBottom="@drawable/arrow_icon"
        android:text="Child"
        android:textColor="@color/gray"
        app:strokeWidth="1dp"
        app:strokeColor="@color/gray"
        android:backgroundTint="@color/orange"
        android:textSize="30sp"
        android:padding="10dp"
        app:cornerRadius="10dp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.50"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/parent_button"
        tools:ignore="HardcodedText" />
</androidx.constraintlayout.widget.ConstraintLayout>